syntax = "proto3";

option csharp_namespace = "GrpcBiDirectionalService";

package message;
 
service Message {
  rpc GetMessage(stream MessageRequest) returns (stream MessageResponse);
}
message MessageRequest {
  string message = 1;
}
message MessageResponse {
  string message = 1;
}
